// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CoverageAreas CoverageAreas component in edit mode renders default regions 1`] = `
<div>
  <section
    class="container-auto overflow-hidden border rounded-md t-refine-search border-slate-300 mb-8 p-0"
  >
    <h2
      class="text-gray-800 w-full px-6 py-3 bg-slate-200 border-b border-slate-300 font-normal text-md md:text-md"
    >
      Coverage areas
    </h2>
    <div
      data-testid="checkbox-group"
    >
      Mocked CheckboxGroup - default keys:
       
      wales, scotland
    </div>
  </section>
</div>
`;

exports[`CoverageAreas component in read mode matches snapshot 1`] = `
<div>
  <section
    class="container-auto overflow-hidden border rounded-md t-refine-search border-slate-300 mb-8 p-0"
  >
    <h2
      class="text-gray-800 w-full px-6 py-3 bg-slate-200 border-b border-slate-300 font-normal text-md md:text-md"
    >
      Coverage areas
    </h2>
    <ul
      class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-6"
    >
      <li
        class="flex items-center space-x-2"
        data-testid="coverage-item"
      >
        <tick-green.svg
          class="w-4"
        />
        <span
          class="font-bold"
        >
          Scotland
        </span>
      </li>
    </ul>
  </section>
</div>
`;
